deploy/04-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: farmbooking-api
        image: gcr.io/webkit-servers/farmbooking-api:${GITHASH}
        ports:
        - containerPort: 80
