deploy/04-nats-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nats
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats
        imagePullPolicy: Always
        ports:
        - containerPort: 4222
          protocol: TCP
        - containerPort: 8222
          protocol: TCP
        - containerPort: 6222
          protocol: TCP
