deploy/03-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: frontend
