deploy/03-nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 4222
    name: client
    protocol: TCP
  - port: 8222
    name: http
    protocol: TCP
  - port: 6222
    name: cluster
    protocol: TCP
  selector:
    app: nats
