deploy/03-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
