deploy/05-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress_barn
  namespace: farmprod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: barnprod.wk1.co
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
